Prevent vertical and horizontal scrollbars on the canvas box
100% x 100% + them margins make the box exceed the
available space and causes scrollbars.

--- a/app/src/editor/canvas/components/Canvas.pcss
+++ b/app/src/editor/canvas/components/Canvas.pcss
@@ -19,8 +19,6 @@
   left: 0;
   bottom: 0;
   right: 0;
-  margin-bottom: 20px;
-  margin-right: 20px;
 }
 
 .Modules {
